fix: Miscellaneous ABlog fixes
I can't tell you how happy I am, dear reader.
I've been having mysterious "document not found" warnings since forever
and I had no idea where they were coming from. The output was OK, I
couldn't find broken links anywhere.

Turns out the ABlog extension uses a page's first paragraph as an excerpt,
and it CANNOT CONTAIN :doc: or :ref: links.
Otherwise, the links are broken in the ..postlist excerpts.
Easy fix by providing a manual excerpt in the ..post directive.

Additionally, ABlog HARDCODES the style for the posts lists (embedded
<style> tags in every HTML page). Fixing that requires being extra-explicit
in your CSS.

All in all, nice piece of software ABlog is...

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -857,27 +857,9 @@ div [role="tablist"] {
     border: none;
 }
 
-/* Guides */
-.postlist li {
-    text-indent: 0 !important;
-}
-
-.postlist li p:nth-child(1) a {
-    font-size: 16px;
-    font-weight: bold;
+/* Remove the style that ABlog hardcodes into the pages */
+.postlist li p a {
     font-style: normal;
-}
-
-.postlist li p:nth-child(2) a {
-    color: #22292F;
-}
-
-ul.postlist-style-circle {
-    list-style-type: none !important;
-}
-
-ul.postlist-style-circle .first {
-    display: inline;
 }
 
 /* Print rules */
